@@ -1,0 +1,1 @@
+require 'plugin_with_model'
