@@ -1,5 +1,6 @@
 == master
 
+* Fix serialization failing when ActiveRecord models have been defined prior to this plugin being loaded
 * Fix cached enumeration records not being isolated from external modifications that don't sweep the cache
 * Respect custom primary_key configurations in ActiveRecord models [Martin Honermeyer]
 * Fix tests failing on Rails 2.3.3+
